# gatekeeper-ai

./: .gatekeeper.toml  .gatekeeper.yml  .gitignore  CLAWDBOT_PATCH.diff  CLAWDBOT_TASK.txt  CLAWDBOT_TASK_TEMPLATE.txt  Dockerfile  MANIFEST.in  Makefile  README.md  SPEC.md  agent_rollback.sh  agent_runner.sh  agents.py  artifact_signer.py  artifact_writer.py  autofix_header.py  bad_code.py  bad_code.py.bak  baseline.py  baseline_manager.py  batch_processor.py  bot.py  bot_cli.py  bot_server.py  ci_gate.py  claude_backend.py  claude_cli.py  claude_cli.py.orig  claude_cli.py.rej  claude_proposer.py  clawdbot.py  config.jsonye  docker-compose.yml  fix.diff  gatekeeper_config.py  gatekeeper_config_schema.json  gatekeeper_local.py  github_comment.py  good_code.py  (+51 more)
.gatekeeper/artifacts/: 20260128_200414_test_iterative.py.json  20260128_200414_test_iterative.py.json.bak  20260128_201203_test_schema.py.json  20260128_201203_test_schema.py.json.bak  20260128_202315__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_agents.py.json  20260128_202318__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_bot_cli.py.json  20260128_202326__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_bot_server.py.json  20260128_202330__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_claude_backend.py.json  20260128_202333__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_claude_cli.py.json  20260128_202338__Users_frank_projects_claude-code-judge_.agent_backups_20260127_133123_clawdbot.py.json  (+92 more)
.wwebjs_cache/: 2.3000.1032512312.html
artifacts/: 2026-01-28T19:16:41.226468+00:00_bad_code.py.json
engines/: executor.py  registry.py  v1.py  v2.py
gatekeeper/: engine.py
gatekeeper_ai/: __init__.py
gatekeeper_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: example_20260127_112820.json  example_20260127_112911.json
schemas/: artifact_v1.json
tests/: helpers.py  test_explain_fixable_failure.py  test_explain_forbidden.py  test_explain_narrative_dominance.py  test_explain_strict_escalation.py  test_phase5b_autofix_header.py
whatsapp-bot/: CLAWDBOT_FIX_PROMPT.txt  bot.js  package-lock.json  package.json
(+1013 files in other folders)
