[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper-ai"
version = "1.0.0"
description = "Autonomous code quality enforcement with AI-powered repair"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Francois Roux", email = "frankroux@gmail.com"}
]
keywords = ["code-quality", "ai", "automation", "linting", "repair"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/frarouAI/gatekeeper-ai"
Repository = "https://github.com/frarouAI/gatekeeper-ai"
Issues = "https://github.com/frarouAI/gatekeeper-ai/issues"

[project.scripts]
gatekeeper = "gatekeeper_ai.cli:main"
gatekeeper-ci = "gatekeeper_ai.ci_gate:main"
