[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper"
version = "0.1.0"
description = "Deterministic code governance and enforcement"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "GatekeeperAI" }
]

dependencies = []

[project.scripts]
gatekeeper = "gatekeeper.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gatekeeper*"]
