[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper"
version = "0.1.0"
description = "Deterministic code governance and enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Francois Roux", email = "frankroux@gmail.com" }
]

dependencies = []

[project.scripts]
gatekeeper = "gatekeeper.cli.main:main"

[tool.setuptools.packages.find]
include = ["gatekeeper*"]

